--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-  <my-name first="Stencil" last="JS"></my-name>
+  <!--my-name first="Stencil" last="JS"></my-name-->
+  <video-player url="sintel-short.mp4"></video-player>
 
 </body>
 </html>
