added basic player layout

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Stencil Starter App</title>
+  <title>Stencil Video Player</title>
   <script src="promise.min.js"></script>
   <script src="build/app.js"></script>
 </head>
+<style>
+  video-player {
+    width: 640px;
+    height: 360px;
+  }
+</style>
 <body>
 
-  <video-player url="sintel-short.mp4"></video-player>
+  <video-player url="the-emoji-movie-trailer.mp4"></video-player>
 
 </body>
 </html>
