added poster, improved support for ios

--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,13 @@
   <script src="build/app.js"></script>
 </head>
 <style>
-  video-player {
-    width: 640px;
-    height: 360px;
+  body {
+    margin: 0;
   }
 </style>
 <body>
 
-  <video-player url="the-emoji-movie-trailer.mp4"></video-player>
+  <video-player url="the-emoji-movie-trailer.mp4" poster="the-emoji-movie-trailer.png"></video-player>
 
 </body>
 </html>
