added basic thumbnail preview

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,14 @@
   }
   video-player {
     max-width: 640px;
+    margin-bottom: 10px;
   }
 </style>
 <body>
 
   <video-player url="the-emoji-movie-trailer.mp4" poster="the-emoji-movie-trailer.png"></video-player>
+  
+  <video-player url="sintel.mp4" poster="sintel.jpg" thumbs="sintel-thumbs.vtt"></video-player>
 
 </body>
 </html>
