added basic subtitles functionality

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,7 @@
 <body>
 
   <div class="video-container">
-    <video-player></video-player>
-  </div>
-
-  <div class="video-container">
-    <video-player url="the-emoji-movie-trailer.mp4" poster="the-emoji-movie-trailer.png"></video-player>
+    <video-player url="the-emoji-movie-trailer.mp4" poster="the-emoji-movie-trailer.png" subtitles="the-emoji-movie-trailer-subtitles-en.vtt"></video-player>
   </div>
   
   <div class="video-container">
