videos play inline on iOS

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
   <div class="video-container">
     <video-player>
-      <video poster="the-emoji-movie-trailer.png">
+      <video poster="the-emoji-movie-trailer.png" webkit-playsinline playsinline>
         <source src="the-emoji-movie-trailer.mp4" />
         <track src="the-emoji-movie-trailer-subtitles-en.vtt" kind="subtitles" srclang="en" label="English" default />
       </video>
@@ -28,7 +28,7 @@
   
   <div class="video-container">
     <video-player>
-      <video poster="sintel.jpg">
+      <video poster="sintel.jpg" webkit-playsinline playsinline>
         <source src="sintel.mp4" />
         <track src="sintel-thumbs.vtt" kind="metadata" label="thumbnails" default />
       </video>
